--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.ojdbc14.jar=C:\\Users\\DellE5570\\Desktop\\jdbc\\ojdbc14.jar
+file.reference.ojdbc14_g.jar=C:\\Users\\DellE5570\\Desktop\\jdbc\\ojdbc14_g.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -41,7 +43,9 @@ j2ee.platform.wsimport.classpath=${j2ee.server.home}/modules/webservices-osgi.ja
 j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.ojdbc14.jar}:\
+    ${file.reference.ojdbc14_g.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
