--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,5 +4,5 @@ j2ee.server.domain=C:/Users/DellE5570/personal_domain
 j2ee.server.home=C:/Program Files (x86)/glassfish-4.1/glassfish
 j2ee.server.instance=[C:\\Program Files (x86)\\glassfish-4.1\\glassfish;C:\\Users\\DellE5570\\personal_domain]deployer:gfv3ee6wc:localhost:24125
 j2ee.server.middleware=C:/Program Files (x86)/glassfish-4.1
-selected.browser=default
+selected.browser=Chrome
 user.properties.file=C:\\Users\\DellE5570\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
